--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,7 @@
 
     {%- seo -%}
 
-    <!-- Minima Theme Stylesheet (REQUIRED) -->
-    <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-
-    <!-- Your Custom CSS (Dark Mode) -->
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/custom.css" | relative_url }}">
 
     {%- feed_meta -%}
