--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,6 @@
         {%- include google-analytics.html -%}
     {%- endif -%}
 
-    <!-- Theme Toggle Script (Load AFTER DOM) -->
-    <script src="{{ "/assets/js/theme-toggle.js" | relative_url }}" defer></script>
+    <!-- Theme Toggle Script -->
+    <script src="{{ "/assets/js/theme-toggle.js" | relative_url }}"></script>
 </head>
