--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,5 @@
         {%- include google-analytics.html -%}
     {%- endif -%}
 
-    <!-- Theme Toggle Script -->
-    <script src="{{ "/assets/js/theme-toggle.js" | relative_url }}" defer></script>
+    <!-- Theme Toggle Script REMOVED -->
 </head>
